--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: required
 services:
   - docker
 
-before install:
+before_install:
   - docker build -t nil123456/docker-react -f Dockerfile.dev .
 
-scripts:
+script:
   - docker run nil123456/docker-react npm run test -- --coverage  
