--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t nil123456/docker-react -f Dockerfile.dev .
 
 script:
-  - travis_wait 100 docker run nil123456/docker-react npm run test -- --coverage  
+  - docker run nil123456/docker-react npm run test -- --coverage  
